--- a/src/ui/actions_main_area.ui
+++ b/src/ui/actions_main_area.ui
@@ -113,7 +113,7 @@
             <bool>false</bool>
            </property>
            <property name="text">
-            <string>888</string>
+            <string/>
            </property>
            <property name="textInteractionFlags">
             <set>Qt::TextSelectableByMouse</set>
