--- a/src/ui/aliases_main_area.ui
+++ b/src/ui/aliases_main_area.ui
@@ -150,6 +150,9 @@
      <property name="toolTip">
       <string>enter a perl regex pattern for your alias; alias are triggers on your input</string>
      </property>
+     <property name="placeholderText">
+      <string>^mycommand$ (example)</string>
+     </property>
     </widget>
    </item>
    <item row="1" column="3">
