--- a/src/ui/source_editor_find_area.ui
+++ b/src/ui/source_editor_find_area.ui
@@ -55,7 +55,8 @@
      </property>
      <property name="icon">
       <iconset resource="../mudlet.qrc">
-       <normaloff>:/icons/export.png</normaloff>:/icons/export.png</iconset>
+       <normaloff>:/icons/export.png</normaloff>:/icons/export.png
+      </iconset>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -72,7 +73,8 @@
      </property>
      <property name="icon">
       <iconset resource="../mudlet.qrc">
-       <normaloff>:/icons/import.png</normaloff>:/icons/import.png</iconset>
+       <normaloff>:/icons/import.png</normaloff>:/icons/import.png
+      </iconset>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -99,7 +101,8 @@
      </property>
      <property name="icon">
       <iconset theme="edit-paste">
-       <normaloff>.</normaloff>.</iconset>
+       <normaloff>.</normaloff>.
+      </iconset>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -128,7 +131,8 @@
      </property>
      <property name="icon">
       <iconset resource="../mudlet.qrc">
-       <normaloff>:/icons/dialog-close.png</normaloff>:/icons/dialog-close.png</iconset>
+       <normaloff>:/icons/dialog-close.png</normaloff>:/icons/dialog-close.png
+      </iconset>
      </property>
      <property name="flat">
       <bool>true</bool>
